# RayTracer

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  build.sh
Config/: Human.cfg  MarioXgun.cfg  Texture.cfg  Texture2.cfg  basic.cfg  castle.cfg  cow.cfg  foret.cfg  mirror.cfg  room.cfg  saturne.cfg  scene_light.cfg  spirale.cfg  steveInABottle.cfg
Plugins/: compil.cpp
docs/: index.html  script.js  style.css
model/Castle/: CastleOBJ.mtl
model/Earth/: Earth2K.mtl
model/Fox/: Fox.mtl
model/LowPolyMario/: mario_body01a.mtl
model/bottle/: bootle.mtl
model/mario-obj/: Mario.mtl
model/steve-minecraft/: NuevoProyecto4.mtl
src/: CMakeLists.txt  main.cpp
src/BVHBuilder/: AABB.cpp  AABB.hpp  BinaryTree.cpp  BinaryTree.hpp
src/Builder/: LibraryManager.cpp  LibraryManager.hpp  RayTracer.cpp  RayTracer.hpp  RayTracerApp.cpp  RayTracerApp.hpp  RenderWorkerPool.cpp  RenderWorkerPool.hpp  Scene.cpp  Scene.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Color/: Color.cpp  Color.hpp
src/DynamicLibrary/: DynamicLibrary.cpp
src/Interfaces/: HitInfo.hpp  ILights.hpp  IPrimitive.hpp
src/Lights/: ALights.cpp  ALights.hpp
src/Lights/DirectionalLight/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp
src/Lights/PointLight/: CMakeLists.txt  PointLight.cpp  PointLight.hpp
src/Materials/: Materials.cpp  Materials.hpp  Texture.cpp  Texture.hpp
src/Parsing/: ArgumentMap.hpp  Parsing_cfg.cpp  Parsing_cfg.hpp
src/Points/: Points.cpp  Points.hpp
src/Primitives/BoundingBox/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt
src/Primitives/Cone/: CMakeLists.txt  Cone.cpp  Cone.hpp
src/Primitives/Cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp
src/Primitives/Donut/: CMakeLists.txt  Donut.cpp  Donut.hpp
src/Primitives/ObjFile/: CMakeLists.txt  ObjFile.cpp  ObjFile.hpp
src/Primitives/Plane/: CMakeLists.txt  Plane.cpp  Plane.hpp
src/Primitives/Sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp
src/Primitives/Triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp
src/Ray/: Ray.cpp  Ray.hpp
src/Rectangle3D/: Screen.cpp  Screen.hpp
src/Vectors/: Vector.cpp  Vector.hpp
src/Visualization/: PpmViewer.cpp  PpmViewer.hpp
tests/: CMakeLists.txt  more_test.cpp  test_color.cpp  test_point.cpp  test_vector.cpp
